--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,46 @@
 body {
-  background: #eee;
+  background: rgb(235, 235, 235);
   font-family: sans-serif;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: auto;
+  padding: 8px;
+  
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 0;
+  margin-bottom: 8px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-bottom: 8px;
 }
 
 .button {
   background: #e3f4ff;
+  padding: 8px;
+  text-align: center;
+
 }
 
 button {
+  display: block;
+  margin: auto;
   background: white;
   border: 1px solid #eee;
+  padding: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+
 }
